--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -1,30 +1,33 @@
-name: Auto Release
-
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types: [created]
 
 permissions:
   contents: write
+  packages: write
 
 jobs:
-  goreleaser:
+  releases-matrix:
+    name: Release Go Binary
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # build and publish in parallel: linux/386, linux/amd64, linux/arm64, windows/386, windows/amd64, darwin/amd64, darwin/arm64
+        goos: [linux, windows, darwin]
+        goarch: ["386", amd64, arm64]
+        exclude:
+          - goarch: "386"
+            goos: darwin
+          - goarch: arm64
+            goos: windows
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: wangyoucao577/go-release-action@v1
         with:
-          fetch-depth: 0
-      - name: Setup Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.20
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          distribution: goreleaser
-          version: latest
-          args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.A_GITHUB_TOKEN }}
-          # Failed to add secret. Secret names must not start with GITHUB_.
+          github_token: ${{ secrets.A_GITHUB_TOKEN }}
+          goos: ${{ matrix.goos }}
+          goarch: ${{ matrix.goarch }}
+          goversion: "https://go.dev/dl/go1.20.linux-amd64.tar.gz"
+          project_path: "./cmd/test-binary"
+          binary_name: "test-binary"
+          extra_files: LICENSE README.md
