--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -28,6 +28,6 @@ jobs:
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
           goversion: "https://go.dev/dl/go1.20.linux-amd64.tar.gz"
-          project_path: "./cmd/test-binary"
+          project_path: "./proxy"
           binary_name: "test-binary"
           extra_files: LICENSE README.md
