--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -29,4 +29,4 @@ jobs:
           goarch: ${{ matrix.goarch }}
           goversion: "https://go.dev/dl/go1.20.linux-amd64.tar.gz"
           project_path: "./proxy"
-          binary_name: "WProxy"
+          binary_name: "wproxy"
